# coolercontrol-truenas-bridge

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  config.example.json  go.mod
.github/workflows/: ci.yml
cmd/truenas-coolercontrol-sensors/: main.go
internal/bridge/: config.go  service.go  temps.go  temps_test.go  truenas.go  writer.go
plugin-files/: config-example.json  manifest.toml
scripts/: install-plugin.sh  install-proxmox.sh  package-deb.sh
src/: config.rs  main.rs  service.rs  truenas.rs
systemd/: truenas-coolercontrol-sensors.service
